--- a/xp-elements.html
+++ b/xp-elements.html
@@ -33,6 +33,7 @@ A collection of core web components from the expand.js team.
 <link rel="import" href="xp-collapse-styles.html">
 <link rel="import" href="xp-collapse.html">
 <link rel="import" href="xp-cookie.html">
+<link rel="import" href="xp-crypt.html">
 <link rel="import" href="xp-dialog-behavior.html">
 <link rel="import" href="xp-dialog-styles.html">
 <link rel="import" href="xp-dialog-wrapper.html">
@@ -75,7 +76,6 @@ A collection of core web components from the expand.js team.
 <link rel="import" href="xp-pages-styles.html">
 <link rel="import" href="xp-pressed-behavior.html">
 <link rel="import" href="xp-pressed-styles.html">
-<link rel="import" href="xp-primus.html">
 <link rel="import" href="xp-progress-behavior.html">
 <link rel="import" href="xp-progress-styles.html">
 <link rel="import" href="xp-request.html">
