--- a/xp-uploader.html
+++ b/xp-uploader.html
@@ -137,23 +137,23 @@ A web component used to perform files uploading.
              *
              * @method header
              * @param {string} name
-             * @param {number | string} [value]
-             * @returns {number | string}
+             * @param {string} [value]
+             * @returns {string}
              */
             header(name, value) {
 
                 // Asserting
                 XP.assertArgument(XP.isString(name, true), 1, 'string');
-                XP.assertArgument(XP.isVoid(value) || XP.isFalse(value) || XP.isInput(value, true), 2, 'string');
+                XP.assertArgument(XP.isVoid(value) || XP.isFalse(value) || XP.isInput(value), 2, 'string');
 
                 // Getting
                 if (!XP.isDefined(value)) { return this.headers[name]; }
 
-                // Setting
-                if (value) { return this.ensure('headers', Object.assign({}, headers, {[name]: value})); }
+                // Removing
+                if (!XP.isInput(value, true)) { this.ensure('headers', XP.omit(this.headers, name)); return; }
 
-                // Deleting
-                this.ensure('headers', XP.omit(this.headers, name));
+                // Setting
+                this.ensure('headers', Object.assign({}, headers, {[name]: value.toString()}));
             },
 
             /**
@@ -232,7 +232,7 @@ A web component used to perform files uploading.
                 /**
                  * The downloaded bytes.
                  *
-                 * @attribute downLoaded
+                 * @attribute down-loaded
                  * @type number
                  * @default 0
                  * @notifies
@@ -248,7 +248,7 @@ A web component used to perform files uploading.
                 /**
                  * The download ratio.
                  *
-                 * @attribute downRatio
+                 * @attribute down-ratio
                  * @type number
                  * @notifies
                  * @readonly
@@ -263,7 +263,7 @@ A web component used to perform files uploading.
                 /**
                  * The download total.
                  *
-                 * @attribute downTotal
+                 * @attribute down-total
                  * @type number
                  * @notifies
                  * @readonly
@@ -500,7 +500,7 @@ A web component used to perform files uploading.
                 /**
                  * The uploaded bytes.
                  *
-                 * @attribute upLoaded
+                 * @attribute up-loaded
                  * @type number
                  * @default 0
                  * @notifies
@@ -516,7 +516,7 @@ A web component used to perform files uploading.
                 /**
                  * The upload ratio.
                  *
-                 * @attribute upRatio
+                 * @attribute up-ratio
                  * @type number
                  * @notifies
                  * @readonly
@@ -531,7 +531,7 @@ A web component used to perform files uploading.
                 /**
                  * The upload total.
                  *
-                 * @attribute upTotal
+                 * @attribute up-total
                  * @type number
                  * @notifies
                  * @readonly
@@ -678,4 +678,5 @@ A web component used to perform files uploading.
             }
         })
     </script>
+
 </dom-module>
