--- a/xp-input-value-behavior.html
+++ b/xp-input-value-behavior.html
@@ -129,7 +129,7 @@ A behavior used to add text input capabilities on a web component.
             if (from === this.memento.value) { return this.memento.bindValue; }
             if (this.type === 'number' || this.type === 'range') { return XP.toDefined(XP.toFinite(from)); }
             if (this.type !== 'date' && this.type !== 'datetime-local') { return String(from) || null; }
-            if (from = XP.toDate(from)) { return XP.toISODate(from.getTime() + (from.getTimezoneOffset() * 60000)); }
+            if (from = XP.toDate(from)) { return XP.toISODate(from.getTime()); }
             return null;
         },
 
@@ -144,7 +144,7 @@ A behavior used to add text input capabilities on a web component.
         _toValue(bindValue) {
             if (!XP.isPrimitive(bindValue)) { return ''; }
             if (this.type !== 'date' && this.type !== 'datetime-local') { return !XP.isVoid(bindValue) ? XP.toString(bindValue) : ''; }
-            if (bindValue = XP.toDate(bindValue)) { return XP.toISODate(bindValue.getTime() - (bindValue.getTimezoneOffset() * 60000)); }
+            if (bindValue = XP.toDate(bindValue)) { return XP.toISODate(bindValue.getTime()); }
             return '';
         },
 
