--- a/xp-menu-behavior.html
+++ b/xp-menu-behavior.html
@@ -132,7 +132,7 @@ A behavior used to add menu capabilities on a web component.
             Polymer.XPOverlayBehaviorImp.__showedChanged.apply(this, arguments);
 
             // Checking
-            if (this.showed) { return this.async(() => this.found || this.hide()); }
+            if (this.showed) { return this.wait(() => this.found || this.hide()); }
 
             // Hiding
             Array.from(this.submenus || []).forEach(submenu => submenu.hide());
