--- a/xp-pages-behavior.html
+++ b/xp-pages-behavior.html
@@ -69,7 +69,7 @@ A behavior used to add pages capabilities on a web component.
             if (!item || !item.closable) { return null; }
 
             // Firing
-            if (item.fire('xp-page-close', {index: index, isActive: !!item.active}, {cancelable: true}).defaultPrevented) { return null; }
+            if (item.fire('xp-page-close', {index: index, isActive: Boolean(item.active)}, {cancelable: true}).defaultPrevented) { return null; }
 
             // Removing
             return Polymer.dom(Polymer.dom(item).parentNode).removeChild(item);
