--- a/xp-sublist-behavior.html
+++ b/xp-sublist-behavior.html
@@ -177,7 +177,7 @@ A behavior used to add sublist capabilities on a web component.
             if (!this.collapsible) { return this.collapsed = false; }
 
             // Collapsing
-            if (!this.collapsed && this.list && this.list.autoCollapse) { XP.findSiblingElements(this, '.sublist').forEach(sublist => sublist.collapse()); }
+            if (!this.collapsed && this.list && this.list.autoCollapse) { XP.getAllSiblings((this.superlist || this.list).sublists, this).forEach(sublist => sublist.collapse()); }
 
             // Expanding
             if (!this.collapsed && this.superlist) { this.superlist.expand(); }
